Finally fixed z-index

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -9,19 +9,13 @@ header {
   background-color: #0B4F6C;
 }
 
-.conversation-message-icon {
-  max-width: 64px;
-  max-height: 64px;
-  width: auto;
-  height: auto;
-}
-
 nav {
   height: 150px;
   display: flex;
   justify-content: center;
   align-items: flex-end;
   color: white;
+  z-index: 2;
 }
 
 nav i {
@@ -88,7 +82,7 @@ nav .usernameLoggedIn {
 
 .search-bar {
   display: none;
-  margin-top: 200px;
+  margin-top: 150px;
   position: fixed;
   left: 0;
   top: 0;
@@ -128,7 +122,7 @@ nav .usernameLoggedIn {
 }
 
 .main-container {
-  margin: 230px 7% 7% 100px;
+  margin: 180px 7% 7% 100px;
   padding-bottom: 5%;
 }
 
